src/objects/UniversityCoursePearsonCourseStructure__c.object
<CustomObject>
    <description>CORE adopted from UKHE</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the association between the University Course and the Pearson Course Structure is Active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PearsonCourseStructure__c</fullName>
        <description>This contains the Pearson course structure.</description>
        <inlineHelpText>This contains the Pearson course structure.</inlineHelpText>
        <label>Pearson Course Structure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PearsonCourseStructure__c.Active_Indicator__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PearsonCourseStructure__c</referenceTo>
        <relationshipName>UniversityCoursePearsonCourseStructure</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that the Pearson Course Structure is the Primary Pearson Code for the Course.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniversityCourse__c</fullName>
        <description>This contains the University course.</description>
        <inlineHelpText>This contains the University course.</inlineHelpText>
        <label>Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipName>UniversityCoursePearsonCourseStructure</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Univ Course Pearson Course</label>
    <nameField>
        <displayFormat>UCPCS-{000000}</displayFormat>
        <label>Pearson Course Code N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Univ Course Pearson Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>